--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Music Player</title>
   <meta name="title" content="Music Player">
-  <meta name="description" content="A web music player html template made by codewithsadee">
+  <meta name="description" content="A web music player html template made by VedRajderkar">
 
   <!-- 
     - favicon
@@ -75,21 +75,21 @@
         <div class="container">
 
           <figure class="music-banner">
-            <img src="./assets/images/1.jpg" width="800" height="800" alt="Happy Moments (Master) Album Poster"
+            <img src="./assets/images/1.jpg" width="800" height="800" alt="Raftaarein"
               class="img-cover" data-player-banner>
           </figure>
 
           <div class="music-content">
 
-            <h2 class="headline-sm" data-title>Happy Moments (Master)</h2>
+            <h2 class="headline-sm" data-title>Raftaarein</h2>
 
             <p class="label-lg label-wrapper wrapper">
-              <span data-album>No Spirit</span>
+              <span data-album>Vishal Dadlani</span>
 
-              <span data-year>2022</span>
+              <span data-year>2011</span>
             </p>
 
-            <p class="label-md artist" data-artist>No Spirit x Tonion</p>
+            <p class="label-md artist" data-artist>Vishal Dadlani</p>
 
             <div class="seek-control">
 
